--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "symfony/validator": "4.3.*",
         "symfony/web-link": "4.3.*",
         "symfony/yaml": "4.3.*",
-        "toiba/fullcalendar-bundle": "^6.2"
+        // "toiba/fullcalendar-bundle": "^6.2"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
