--- a/config/routes/fullcalendar.yaml
+++ b/config/routes/fullcalendar.yaml
@@ -1,2 +1,2 @@
-toiba_fullcalendar:
-    resource: "@FullCalendarBundle/Resources/config/routing.yaml"
+# toiba_fullcalendar:
+#     resource: "@FullCalendarBundle/Resources/config/routing.yaml"
